<resources translatable="false" xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">
    <string name="app_name"  translatable="false">物格社交</string>
    <string name="main_login_user_agreement_left" translatable="false">登陆即代表你已阅读并同意</string>
    <string name="main_login_user_agreement" translatable="false"> 《用户使用协议》 </string>
    <string name="main_login_sum" translatable="false">和</string>
    <string name="main_login_privacy_policy" translatable="false"> 《隐私政策》 </string>
    <string name="main_login_underway" translatable="false">正在跳转</string>
    <string name="wuge_money" translatable="false">$ :</string>
    <string name="wueg_friend_play" translatable="false">好友在玩</string>
    <string name="wuge_more" translatable="false">更多</string>
    <string name="my_knapsack" translatable="false">背包</string>
    <string name="my_advise" translatable="false">提意见</string>
    <string name="my_room" translatable="false">房间</string>
    <string name="my_update" translatable="false">更新</string>
    <string name="my_set" translatable="false">设置</string>
    <string name="map_search_this_city" translatable="false">当前城市：</string>
    <string name="map_search_shop" translatable="false">店铺搜索</string>
    <string name="map_search_street" translatable="false">街道搜索</string>
    <string name="map_search_wuge_master" translatable="false">物格主人搜索</string>
    <string name="map_edit_search" translatable="false">search</string>
    <string name="map_search_go" translatable="false">前 往</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="map_nickname" translatable="false">昵称：</string>
    <string name="map_cross_border" translatable="false">跨境</string>
    <string name="map_whether_to" translatable="false">是否前往</string>
    <string name="map_ok" translatable="false">确认</string>
    <string name="map_shop_nickname" translatable="false">店铺名称:</string>
    <string name="map_shop_manager_name" translatable="false">店长姓名:</string>
    <string name="map_door_message" translatable="false">门牌信息:</string>
    <string name="map_shop_photo" translatable="false">联系电话:</string>
    <string name="map_shop_site" translatable="false">地理位置:</string>
    <string name="map_wuge_master" translatable="false">物格主人:</string>
    <string name="wuge_jiantou" translatable="false"><![CDATA[>]]></string>
    <string name="wuge_map" translatable="false">地图</string>
    <string name="message_photo" translatable="false">相册</string>
    <string name="message_scan_qr" translatable="false">扫描二维码</string>
    <string name="navigation_wuge" translatable="false">物格</string>
    <string name="navination_message" translatable="false">消息</string>
    <string name="navination_discover" translatable="false">发现</string>
    <string name="navigation_my" translatable="false">我的</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="discover_dis" translatable="false">发现</string>
    <string name="about_text" translatable="false">This application allows you to load 3D object models (currently only Wavefront, Stereolithography and Collada formats are supported).\n\nThe purpose of this application is to learn how to draw in android using the OpenGL 2.0 language.\n\nThe code for this application is open source and it can be found at https://github.com/andresoviedo/android-3D-model-viewer\n\nAs this is my first android app and Im still learning the OpenGL 2.0 language, it is highly probable that there are bugs; but I will try to continue improving the app.\n\nThe included models in the app were taken for free from Internet.\n\nThis application does not collect or make use of any kind of personal information.\n\nAny comments, suggestions, contributions, complains or donations are welcome. Feel free to contact me at andresoviedo@gmail.com.\n\nhttp://www.andresoviedo.org</string>
    <string name="help_text" translatable="false">Load Model\n\nLoad the samples included with the app (Samples), github repository (Repository) or download them to your device and open it (using File or Android Explorer)\n\nSupported formats\n\nOnly wavefront, stereolithography or Collada files (*.obj, *.stl, *.dae) are currently supported.\n\nDemo\n\nExample scene using the API. It loads several models using different draw modes, colors, textures, etc.\n\nRenderer\n\nOnce you load a model, you can pinch to zoom, translate the camera with your finger and rotate the screen with 2 fingers\n\nToolbar\n\nIn the action bar you will also find several buttons for toggling different draw modes like wireframe or points, enabling or disabiling lights, textures or animation.\n\nTroubleshooting\n\nIf the model file (.obj) is referencing any materials file (*.mtl) be sure its in the same folder; same applies for texture files (*.jpg, *.bmp) being referenced in the material file.\n\nIf you need more help or have any issue feel free to open a ticket in github or ask me. Thank you in advance for your feedback.\n\nhttps://github.com/andresoviedo/android-3D-model-viewer/issues\n\nandresoviedo@gmail.com</string>
    <string-array name="menu_items">
        <item>Load Model</item>
        
        <item>Demo</item>
        <item>Help</item>
        <item>About</item>
        
        <item>Exit</item>
    </string-array>
    <string name="model_name" translatable="false">Model name</string>
    <string name="texture" translatable="false">Texture</string>
    <string name="invert_texture_coordinates" translatable="false">Invert texture coordinates</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="title_activity_model" translatable="false">Model</string>
    <string name="load" translatable="false">Load</string>
    <string name="load_model" translatable="false">Load Model</string>
    <string name="scene" translatable="false">Scene...</string>
    <string name="toggle_wireframe" translatable="false">Toggle wireframe</string>
    <string name="toggle_textures" translatable="false">Toggle textures</string>
    <string name="toggle_lights" translatable="false">Toggle lights</string>
    <string name="toggle_animation" translatable="false">Toggle animation</string>
    <string name="toggle_boundingbox" translatable="false">Toggle bounding box</string>
    <string name="load_texture" translatable="false">Load texture</string>
    <string name="app_logo_desc" translatable="false">Teapot animated logo</string>
    <string name="wuge_task" translatable="false">任务</string>
    <string name="wuge_room" translatable="false">房间</string>
    <string name="wuge_sign_in" translatable="false">签到</string>
    <string name="wuge_game" translatable="false">圈地</string>
    <string name="wuge_task_title" translatable="false">任务中心</string>
    <string name="message_people_nearby" translatable="false">附近的人</string>
    <string name="message_recommend_see_schoolboy" translatable="false">只看男生</string>
    <string name="message_recommend_see_schoolgirl" translatable="false">只看女生</string>
    <string name="message_recommend_see_all" translatable="false">查看全部</string>
    <string name="wuge_sign_headline" translatable="false">签到</string>
    <string name="wuge_sign_week_sunday" translatable="false">日</string>
    <string name="wuge_sign_week_monday" translatable="false">一</string>
    <string name="wuge_sign_week_tuesday" translatable="false">二</string>
    <string name="wuge_sign_week_wednesday" translatable="false">三</string>
    <string name="wuge_sign_week_thursday" translatable="false">四</string>
    <string name="wuge_sign_week_friday" translatable="false">五</string>
    <string name="wuge_sign_week_saturday" translatable="false">六</string>
    <string name="personal_information_set" translatable="false">设置</string>
    <string name="personal_essential_ID" translatable="false">ID:</string>
    <string name="personal_essential_age" translatable="false">年龄:</string>
    <string name="personal_essential_meili" translatable="false">魅力值:</string>
    <string name="personal_essential_social_status">身价:</string>
    <string name="personal_essential_constellation">星座:</string>
    <string name="personal_essential_class">用户等级:</string>
    <string name="personal_essential_photo">相册</string>
    <string name="personal_essential_personalized_signature">个签</string>
    <string name="friends_addfriend_headline">添加好友</string>
    <string name="message_friend_addfriend_seach">搜索</string>
    <string name="message_friends_addfriend_my_qr">我的二维码</string>
    <string name="message_friends_addfriend_edit">请输入用户ID</string>
    <string name="message_friends_addfriend_floor">扫一扫</string>
    <string name="discover_issue">发布</string>
    <string name="message_friends_edit">搜索</string>
    <string name="message_new_friend">新的好友</string>
    <string name="sign_in_btn">签到</string>
    <string name="sign_note">注：节气的转换涉及到不定的时辰，并不是按照0点转换。</string>
    <string name="discover_cancel">取消</string>
    <string name="discover_item_all_comment">全部评论</string>
    <string name="edit_comment">请输入你想说的</string>
    <string name="discover_item_part_details">详情</string>
    <string name="my_class">等级</string>
    <string name="my_social">身价</string>
    <string name="my_charm">魅力值</string>
    <string name="my_personal_homepage_image">个人主页</string>
    <string name="my_name_card">我的名片</string>
    <string name="knapsack_my_knapsack">我的背包</string>
    <string name="personal_phone">手机号</string>
    <string name="personal_qr_business_card">二维码名片</string>
    <string name="personal_id">用户ID</string>
    <string name="personal_nickname">昵称</string>
    <string name="personal_head">头像</string>
    <string name="personal_sex">性别</string>
    <string name="personal_birthday">生日</string>
    <string name="personal_constellation">星座</string>
    <string name="personal_region">地区</string>
    <string name="personal_personalized_signature">个性签名</string>
    <string name="set_nickname">设置昵称</string>
    <string name="set_confirm">确定</string>
    <string name="set_new_nickname">请输入新的昵称</string>
    <string name="information_set_boy">男</string>
    <string name="information_set_girl">女</string>
    <string name="wuge_user_qr">扫一扫二维码，加我好友</string>
    <string name="set_social_status">请输入您的身价值</string>
    <string name="set_status">设置身价</string>
    <string name="personal_add_friend">加好友</string>
    <string name="login_yiwuyige">一物一格</string>
    <string name="login_shejiaotiandi">社交天地</string>
    <string name="discover_report_content">举报内容</string>
    <string name="discover_report_submit">提交</string>
    <string name="report_else">其它</string>
    <string name="report_rumour">造谣</string>
    <string name="report_money_swindle">涉及金额诈骗</string>
    <string name="report_bloodiness">涉黄/血腥暴力</string>
    <string name="report_politics">涉及政治</string>
    <string name="comment_send">发送</string>
    <string name="knapsack_click">点击使用</string>
    <string name="knapsack_period_start">起始时间：</string>
    <string name="knapsack_period_finish">结束时间：</string>
    <string name="friend_nickname_set">修改备注</string>
    <string name="friend_blacklist_set">加入黑名单</string>
    <string name="friend_report_set">举报此用户</string>
    <string name="friend_delete">删除好友</string>
    <string name="my_set_message">消息设置</string>
    <string name="my_set_privacy">隐私设置</string>
    <string name="my_set_clear_cache">清理缓存</string>
    <string name="my_set_clear_chatting">清理聊天记录</string>
    <string name="my_set_real_name">实名认证</string>
    <string name="startup_activity_privacy_policy_headline">服务协议和隐私政策</string>
    <string name="startup_activity_privacy_policy_text1">请您务必审慎阅读、充分理解"服务协议"和"隐私政策"各条款，包括但不限于为你提供即时通讯、内容分享等服务，我们需要收集你的设备信息、操作日志等个人信息。你可以在"设置"中查看、变更、删除个人信息并管理你的授权。</string>
    <string name="startup_activity_privacy_policy_text2">你可阅读《用户使用协议》和《隐私政策》了解详细信息。如果你同意，请点击\'同意\'开始接受我们的服务</string>
    <string name="startup_activity_privacy_policy_ok">同意</string>
    <string name="startup_activity_privacy_policy_not">暂不使用</string>
</resources>