<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="125dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="@mipmap/login_wuge"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10.5dp"
                android:textColor="@color/login_yiwuyige"
                android:text="@string/login_yiwuyige"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/login_shejiaotiandi"
                android:text="@string/login_shejiaotiandi"/>

        </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="139.5dp">
        <ImageButton
            android:layout_width="170dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@mipmap/wechat_login"
            android:onClick="wxLogin"
            tools:ignore="ContentDescription" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="51dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">
            <TextView
                android:id="@+id/denglu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="#333333"
                android:text="@string/main_login_user_agreement_left"
                tools:ignore="SmallSp">

            </TextView>
            <TextView
                android:id="@+id/user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_login_user_agreement"
                android:textSize="10sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:onClick="userAgreement"
                tools:ignore="SmallSp">
            </TextView>
        <TextView
            android:id="@+id/and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/main_login_sum"
            android:textColor="#333333"
            tools:ignore="SmallSp">
        </TextView>
        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/main_login_privacy_policy"
            android:onClick="privacyPolicy"
            android:textColor="#000"
            android:textStyle="bold"
            tools:ignore="SmallSp">
        </TextView>
    </LinearLayout>
<!--    <FrameLayout-->
<!--        android:id="@+id/main_await"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="@drawable/background_shadow">-->
<!--        <ImageView-->
<!--            android:id="@+id/shejiao_jiazai"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_gravity="center"-->
<!--            android:src="@drawable/loading_image"-->
<!--            tools:ignore="ContentDescription,ObsoleteLayoutParam">-->
<!--        </ImageView>-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:text="@string/main_login_underway"/>-->
<!--    </FrameLayout>-->
</RelativeLayout>