<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/wuge_banner"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/friends_addfriend_headline">
    </TextView>
    <TextView
        android:id="@+id/personal_add_friend_hint"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">
    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/personal_add_friend_cancel"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/discover_cancel"
            android:gravity="center"
            tools:ignore="ButtonStyle">
        </Button>
        <Button
            android:id="@+id/personal_add_friend_confirm"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginStart="40dp"
            android:textColor="@color/black"
            android:text="@string/set_confirm"
            android:gravity="center"
            tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>
</LinearLayout>
