<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:ignore="ResourceName">
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@drawable/message_nearby_item_background"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:text="@string/set_status"/>
        <EditText
            android:id="@+id/social_status_edit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:background="@drawable/message_friends_addfriend_edit"
            android:maxLength="5"
            android:hint="@string/set_social_status"
            android:digits="0123456789"
            android:layout_margin="10dp"
            tools:ignore="RtlSymmetry"
            android:importantForAutofill="no">
        </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="27dp"
            android:baselineAligned="false">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">
                <Button
                    android:id="@+id/social_status_cancel"
                    android:layout_width="100dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="#4C6EF6"
                    android:text="@string/discover_cancel"
                    android:background="@drawable/set_social_status_cancel">
                </Button>
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">
                <Button
                    android:id="@+id/social_status_confirm"
                    android:layout_width="100dp"
                    android:layout_height="28dp"
                    android:text="@string/set_confirm"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:background="@drawable/set_social_status_confirm">
                </Button>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
