<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_page"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ResourceName">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sign_solar">
        <FrameLayout
            android:id="@+id/set_nickname_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="4.5dp"
            android:onClick="setNickNameOnClick"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/wuge_return"
                tools:ignore="ContentDescription" />
        </FrameLayout>
        <TextView
            android:id="@+id/set_nickname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_nickname"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:textStyle="bold">
        </TextView>
        <FrameLayout
            android:id="@+id/set_nickname_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.5dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="4.5dp"
            android:onClick="setNickNameOnClick"
            android:padding="10dp"
            tools:ignore="RelativeOverlap">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_confirm"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/message_nearby_item_background">
        <EditText
            android:id="@+id/set_nickname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_new_nickname"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:maxLength="8"
            android:background="@null"
            tools:ignore="Autofill,TextFields">
        </EditText>
    </RelativeLayout>
</LinearLayout>
